--- a/zed/settings.json
+++ b/zed/settings.json
@@ -7,6 +7,7 @@
 // custom settings, run `zed: open default settings` from the
 // command palette (cmd-shift-p / ctrl-shift-p)
 {
+  "show_whitespaces": "all",
   "indent_guides": {
     "background_coloring": "indent_aware",
     "coloring": "indent_aware"
