--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -7,3 +7,6 @@ set -g @plugin 'sainnhe/tmux-fzf'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
+bind-key -T copy-mode C-u send-keys -X halfpage-up
+bind-key -T copy-mode C-d send-keys -X halfpage-down
