chore: use debian instead for sbox

--- a/sbox/Dockerfile
+++ b/sbox/Dockerfile
@@ -1,20 +1,19 @@
-FROM golang:1.25.5-alpine3.23 AS golang
-FROM rust:alpine3.23 AS rust
-FROM node:24-alpine3.23 AS node
+FROM golang:1.25.5-trixie AS golang
+FROM rust:1.92.0-slim-trixie AS rust
 
-FROM alpine:3.23.0
+FROM debian:stable-20251208
 
 # Install base packages and build tools
-RUN apk add --no-cache \
+RUN apt-get update && apt-get install -y \
   bash \
   curl \
   wget \
   git \
   coreutils \
-  build-base \
-  linux-headers \
+  build-essential \
+  linux-headers-generic \
   ca-certificates \
-  openssl-dev \
+  libssl-dev \
   pkgconf \
   jq
 
@@ -31,21 +30,24 @@ ENV RUSTUP_HOME="/usr/local/rustup"
 ENV CARGO_HOME="/usr/local/cargo"
 ENV PATH="/usr/local/cargo/bin:${PATH}"
 
+# Copy bashrc configuration
+COPY bashrc.sh /root/.bashrc
+
 # Copy Node.js from official image
-COPY --from=node /usr/local/bin/node /usr/local/bin/node
-COPY --from=node /usr/local/lib/node_modules /usr/local/lib/node_modules
-RUN ln -s /usr/local/lib/node_modules/npm/bin/npm-cli.js /usr/local/bin/npm \
-  && ln -s /usr/local/lib/node_modules/npm/bin/npx-cli.js /usr/local/bin/npx
+ENV BASH_ENV /root/.bash_env
+RUN touch "${BASH_ENV}"
+
+# Download and install nvm
+RUN curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.3/install.sh | PROFILE="${BASH_ENV}" bash
+RUN echo "24" > .nvmrc
+RUN bash -lc 'nvm install'
+RUN bash -lc 'npm install -g @anthropic-ai/claude-code'
 
 
-RUN npm install -g @anthropic-ai/claude-code
 
 # Install uv
 RUN curl -LsSf https://astral.sh/uv/install.sh | sh
 ENV PATH="/root/.local/bin:${PATH}"
-
-# Copy bashrc configuration
-COPY bashrc.sh /root/.bashrc
 
 # Copy start script to PATH
 COPY start.sh /usr/local/bin/start
