chore: remove moreutils, get parallel

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -30,8 +30,8 @@ brew "lazygit"
 brew "lua"
 brew "miller"
 brew "mise"
-brew "moreutils"
 brew "mtr"
+brew "parallel"
 brew "podman"
 brew "pre-commit"
 brew "protobuf"
