feat: zoxide + sesh

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -38,6 +38,7 @@ brew "protobuf"
 brew "pstree"
 brew "ripgrep"
 brew "rustup"
+brew "sesh"
 brew "sponge"
 brew "stow"
 brew "tlrc"
@@ -49,7 +50,7 @@ brew "watch"
 brew "wget"
 brew "xz"
 brew "yq"
-brew "z"
+brew "zoxide"
 
 cask "hammerspoon"
 cask "keycastr"
