--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -2,11 +2,9 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
-# Rest:
-set -g @plugin 'sainnhe/tmux-fzf'
-
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 
 bind-key -T copy-mode C-u send-keys -X halfpage-up
 bind-key -T copy-mode C-d send-keys -X halfpage-down
+bind-key -T copy-mode-vi '/' search-backward
