--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -5,9 +5,9 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 
+set-window-option -g mode-keys vi
 bind-key -T copy-mode C-u send-keys -X halfpage-up
 bind-key -T copy-mode C-d send-keys -X halfpage-down
-bind-key -T copy-mode-vi '/' search-backward
 
 # https://github.com/joshmedeski/sesh
 # Recommended settings + fzf
