chore: change tmux binding for session

--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -14,7 +14,7 @@ bind-key -T copy-mode C-d send-keys -X halfpage-down
 bind-key x kill-pane # skip "kill-pane 1? (y/n)" prompt
 set -g detach-on-destroy off  # don't exit from tmux when closing a session
 
-bind-key "T" run-shell "sesh connect \"$(
+bind-key "t" run-shell "sesh connect \"$(
   sesh list --icons | fzf-tmux -p 80%,70% \
     --no-sort --ansi --border-label ' sesh ' --prompt '⚡  ' \
     --header '  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
