--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -5,9 +5,17 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 
-set-window-option -g mode-keys vi
+setw -g mode-keys vi
 bind-key -T copy-mode C-u send-keys -X halfpage-up
 bind-key -T copy-mode C-d send-keys -X halfpage-down
+bind-key -T copy-mode-vi 'v' send -X begin-selection     # Begin selection in copy mode.
+bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel 'pbcopy'  # Yank selection to system clipboard.
+
+# Enable clipboard
+set -g set-clipboard on
+set -g @override_copy_command 'pbcopy'
+set -g @yank_selection 'clipboard'
+set-option -sa terminal-features ',*:clipboard'
 
 # https://github.com/joshmedeski/sesh
 # Recommended settings + fzf
