--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -27,6 +27,7 @@ brew "gzip"
 brew "htop"
 brew "hyperfine"
 brew "lazygit"
+brew "lbzip2"
 brew "lua"
 brew "miller"
 brew "mise"
@@ -53,6 +54,5 @@ brew "xz"
 brew "yq"
 brew "zoxide"
 
-cask "hammerspoon"
 cask "keycastr"
 cask "maccy"
