feat: claude-sbox add deno

--- a/sbox/Dockerfile
+++ b/sbox/Dockerfile
@@ -16,6 +16,7 @@ RUN apt-get update && apt-get install -y \
   linux-headers-generic \
   pkgconf \
   protobuf-compiler \
+  unzip \
   wget
 
 # Copy Go from official image
@@ -31,9 +32,6 @@ ENV RUSTUP_HOME="/usr/local/rustup"
 ENV CARGO_HOME="/usr/local/cargo"
 ENV PATH="/usr/local/cargo/bin:${PATH}"
 
-# Copy bashrc configuration
-COPY bashrc.sh /root/.bashrc
-
 # Copy Node.js from official image
 ENV BASH_ENV /root/.bash_env
 RUN touch "${BASH_ENV}"
@@ -43,15 +41,17 @@ RUN curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.3/install.sh | P
 RUN echo "24" > .nvmrc
 RUN bash -lc 'nvm install'
 
+RUN curl -fsSL https://deno.land/install.sh | sh
 RUN curl -fsSL https://claude.ai/install.sh | bash
 
 # Install uv
 RUN curl -LsSf https://astral.sh/uv/install.sh | sh
-ENV PATH="/root/.local/bin:${PATH}"
 
 # Copy start script to PATH
 COPY start.sh /usr/local/bin/start
 RUN chmod +x /usr/local/bin/start
+# Copy bashrc configuration
+COPY bashrc.sh /root/.bashrc
 
 WORKDIR /workspace
 
