--- a/zed/settings.json
+++ b/zed/settings.json
@@ -27,7 +27,7 @@
   "base_keymap": "VSCode",
   "ui_font_size": 16,
   "buffer_font_size": 14,
-  "theme": "Github Dark",
+  "theme": "GitHub Dark Colorblind",
   "buffer_font_features": {
     "calt": false,
   },
