--- a/zed/settings.json
+++ b/zed/settings.json
@@ -47,6 +47,9 @@
     "Python": {
       "language_servers": ["ty"],
     },
+    "TypeScript": {
+      "language_servers": ["tsgo", "vtsls"],
+    },
   },
   "git": {
     "inline_blame": {
