feat: enable rustc_private source detection rust_analyzer

--- a/zed/settings.json
+++ b/zed/settings.json
@@ -63,6 +63,18 @@
         "arguments": ["beta", "lsp"],
       },
     },
+    "rust-analyzer": {
+      "initialization_options": {
+        "rustc": {
+          "source": "discover",
+        },
+        "server": {
+          "extraEnv": {
+            "RUSTUP_TOOLCHAIN": "nightly",
+          },
+        },
+      },
+    },
     "vtsls": {
       "settings": {
         "vtsls": {
