feat: include default exclusions

--- a/zed/settings.json
+++ b/zed/settings.json
@@ -7,6 +7,20 @@
 // custom settings, run `zed: open default settings` from the
 // command palette (cmd-shift-p / ctrl-shift-p)
 {
+  "file_scan_inclusions": [".env*", "plans"],
+  "file_scan_exclusions": [
+    "**/.git",
+    "**/.svn",
+    "**/.hg",
+    "**/.jj",
+    "**/CVS",
+    "**/.DS_Store",
+    "**/Thumbs.db",
+    "**/.classpath",
+    "**/.settings",
+    "**/dist",
+    "**/node_modules",
+  ],
   "colorize_brackets": true,
   "show_whitespaces": "all",
   "indent_guides": {
